@@ -16,6 +16,11 @@ Installation notes specific to Texinfo:
     make TEXMF=/your/texmf install-tex
   texinfo.tex is installed in ${TEXMF}/tex/texinfo/texinfo.tex, etc.
 
+* On the other hand, if you're maintaining a TeX distribution, you don't
+  want your users to see the installation warnings, because you already
+  have the files installed.  (And you're keeping them up to date, right?)
+  In this case, run configure --disable-install-warnings.
+
 * On MacOSX, if configure fails with the error:
 	ac_cv_build='config.sub: invalid option -apple-darwin7.2.0
 this is probably because your uname -p is returning "unknown".  Use
