@@ -29,6 +29,8 @@ convenience, here's a url to one of the relevant sections:
 * Distribution:
   . new convenience script texi2pdf, equivalent to texi2dvi --pdf (from tetex).
   . some cross-compiling support in configure && make.
+  . new configure option --disable-install-warnings, for TeX
+    distributions which do have the files installed.
   . automake 1.9.3.
 
 4.7 (9 April 2004)
